--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>301</width>
-    <height>38</height>
+    <width>377</width>
+    <height>58</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,19 @@
     </property>
     <property name="text">
      <string>To take a screenshot, press CTRL + Shift + 4</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>351</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Closing this window will hide PoPi to the system tray</string>
     </property>
    </widget>
   </widget>
